# privacy-scanner

./: .gitignore  AUTHORS  README.md  pyproject.toml
.claude-plugin/: marketplace.json
scripts/: report_html.py
